feature: apply code highlight

--- a/_data/blog/마크다운-예제.md
+++ b/_data/blog/마크다운-예제.md
@@ -4,9 +4,9 @@ description: "마크다운 예제입니다."
 date: "2022-09-29"
 ---
 
-# [공통] 마크다운 markdown 작성법
-
-<h1 id="a-fish-called-wanda">A fish called wanda</h1>
+```js
+console.log("hello world");
+```
 
 <iframe src="https://codesandbox.io/embed/original-method-8rcmzx?autoresize=1&amp;fontsize=14&amp;theme=dark" style="width:100%;" height="500px"></iframe>
 
